--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
 
 @layer base {
   html {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Aptos', sans-serif;
+    font-size: 12px
   }
 }
 
